<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>niftkIPHostPortExtensionDialog</class>
 <widget class="QDialog" name="niftkIPHostPortExtensionDialog">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>270</width>
    <height>186</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Set the host, port and file extension</string>
  </property>
  <layout class="QHBoxLayout" name="horizontalLayout">
   <item>
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
      <layout class="QFormLayout" name="formLayout">
       <item row="0" column="0">
        <widget class="QLabel" name="m_HostNameLabel">
         <property name="toolTip">
          <string>The name of the computer, or IP address</string>
         </property>
         <property name="text">
          <string>host name:</string>
         </property>
        </widget>
       </item>
       <item row="0" column="1">
        <widget class="QLineEdit" name="m_HostName">
         <property name="toolTip">
          <string>The name of the computer, or IP address</string>
         </property>
        </widget>
       </item>
       <item row="1" column="0">
        <widget class="QLabel" name="m_PortNumberLabel">
         <property name="toolTip">
          <string>The port number the server is listening on</string>
         </property>
         <property name="text">
          <string>IP port number:</string>
         </property>
        </widget>
       </item>
       <item row="1" column="1">
        <widget class="QSpinBox" name="m_PortNumber">
         <property name="toolTip">
          <string>The port number the server is listening on.</string>
         </property>
         <property name="minimum">
          <number>3200</number>
         </property>
         <property name="maximum">
          <number>9999</number>
         </property>
        </widget>
       </item>
       <item row="2" column="0">
        <widget class="QLabel" name="m_FileExtensionLabel">
         <property name="text">
          <string>file extension:</string>
         </property>
        </widget>
       </item>
       <item row="2" column="1">
        <widget class="QComboBox" name="m_FileExtensionComboBox"/>
       </item>
      </layout>
     </item>
     <item>
      <widget class="QDialogButtonBox" name="m_DialogButtons">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
       <property name="standardButtons">
        <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
       </property>
      </widget>
     </item>
    </layout>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections>
  <connection>
   <sender>m_DialogButtons</sender>
   <signal>accepted()</signal>
   <receiver>niftkIPHostPortExtensionDialog</receiver>
   <slot>accept()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>248</x>
     <y>254</y>
    </hint>
    <hint type="destinationlabel">
     <x>157</x>
     <y>274</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>m_DialogButtons</sender>
   <signal>rejected()</signal>
   <receiver>niftkIPHostPortExtensionDialog</receiver>
   <slot>reject()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>316</x>
     <y>260</y>
    </hint>
    <hint type="destinationlabel">
     <x>286</x>
     <y>274</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
